--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </div>  
         </div>
     </div>
-    <h1 style="text-align: center; font-size: 60px; padding: 20px;">رحلتك الدراسية في الخارج تبدء</h1>
+    <h1 style="text-align: center; font-size: 60px; padding: 20px;">رحلتك الدراسية في الخارج تبدأ</h1>
 
 <div class="containers">
 
@@ -43,7 +43,7 @@
         <div class="step">
             <div class="icons">💬</div>
             <div class="text">
-                <h3>التحدث مع مستشارنا</h3>
+                <h3>التحدث مع مستشارينا </h3>
                 <p>سيعمل مستشارنا على جميع متطلباتك بالتفصيل لضمان حصولك على الجامعة المناسبة لتطلعاتك الأكاديمية.</p>
             </div>
         </div>
@@ -83,7 +83,7 @@
         <div class="step">
             <div class="icons">✈️</div>
             <div class="text">
-                <h3>تحجز تذاكر الطيران والاستقبال من المطار</h3>
+                <h3>حجز تذاكر الطيران</h3>
                <p>توفير أفضل الأسعار لتذاكر الطيران وترتيب إجراءات الاستقبال من المطار مع الجامعة أو المعهد</p>
             </div>
         </div>
